--- a/feeds.toml
+++ b/feeds.toml
@@ -1,13 +1,7 @@
-[funfacts]
-title = "Wikipedia — did you know?"
-url = "https://en.wikipedia.org/wiki/Main_Page"
-entrySelector = "#mp-dyk > ul li"
-titleSelector = "b"
-linkSelector = "b a"
-
-[wikivoyage]
-title = "Wikivoyage recommendations"
-url = "https://en.wikivoyage.org/wiki/Main_Page"
-entrySelector = ".jcarousel-wrapper .jcarousel-item"
-titleSelector = "h2"
-linkSelector = "h2 a"
+[its-nice-that]
+title = "It's Nice That"
+url = "https://www.itsnicethat.com/articles"
+entrySelector = ".listing-item"
+titleSelector = ".listing-item-title"
+linkSelector = "a"
+contentSelector = "img"
