fix: try to get image content

--- a/feeds.toml
+++ b/feeds.toml
@@ -4,4 +4,4 @@ url = "https://www.itsnicethat.com/articles"
 entrySelector = ".listing-item"
 titleSelector = ".listing-item-title"
 linkSelector = "a"
-contentSelector = "img"
+contentSelector = ".listing-item-image img"
